Swagger get apartment endpoint fix
